# SE-Assignment

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/se/assignment/: Camera2Controller.kt  GLRenderer.kt  GLView.kt  MainActivity.kt  NativeBridge.kt
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml  styles.xml
web/: index.html  index.ts  tsconfig.json
